First attempt at grouping photos on timeline based on flood event rather than locality, fixing intial bugs.

--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -24,7 +24,8 @@
             <ul class="dropdown-menu">
                 {% if flood_events %}
                     {% for flood_event in flood_events %}
-                        <li><a href="timeline.html?{{ flood_event[0].date_taken }}">{{ flood_event[0].date_taken }}</a></li>
+                        {% photo = flood_event[0] %}
+                        <li><a href="timeline.html?{{ photo.date_taken }}">{{ photo.date_taken }}</a></li>
                     {% endfor %}
                 {% endif %}
               </ul>
