First attempt at grouping photos on timeline based on flood event rather than locality, fixing intial bugs.

--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -28,6 +28,8 @@
                             {% if photo = flood_event|first %}
                                 <li><a href="timeline.html?{{ photo.date_taken }}">{{ photo.date_taken }}</a></li>
                             {% endif %}
+                            {% else %}
+                                <li><a href="timeline.html">None</a></li>
                         {% endfor %}
                     {% endfor %}
                 {% endif %}
