Displaying flood event date in dropdown menu.

--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -24,7 +24,7 @@
             <ul class="dropdown-menu">
                 {% if flood_events %}
                     {% for flood_event in flood_events %}
-                        <li><a href="timeline.html?{{ flood_event|length }}">{{ flood_event|length }}</a></li>
+                        <li><a href="timeline.html?{{ flood_event.0.date_taken }}">{{ flood_event.0.date_taken }}</a></li>
                     {% endfor %}
                 {% endif %}
               </ul>
