--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -25,7 +25,7 @@
                 {% if flood_events %}
                     {% for flood_event in flood_events reversed %}
                         {% with last_element=flood_event|last %}
-                            <li><a href="timeline.html?{{ flood_event.0.date_taken }}+{{ last_element.date_taken }}">{{ flood_event.0.date_taken }} - {{ last_element.date_taken }}</a></li>
+                            <li><a href="timeline.html?{{ flood_event.0.date_taken|date:'SHORT_DATE_FORMAT' }}+{{ last_element.date_taken|date:'SHORT_DATE_FORMAT' }}">{{ flood_event.0.date_taken|date:'SHORT_DATE_FORMAT' }} - {{ last_element.date_taken|date:'SHORT_DATE_FORMAT' }}</a></li>
                         {% endwith %}
                     {% endfor %}
                 {% endif %}
