Adding rain gauge data to flood events.

--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -25,9 +25,7 @@
                 <li><a href="timeline.html">All Events</a></li>
                 {% if flood_events %}
                     {% for flood_event in flood_events reversed %}
-                        {% with last_element=flood_event|last %}
-                            <li><a href="timeline.html?{{ flood_event.0.date_taken|date:'SHORT_DATE_FORMAT' }}+{{ last_element.date_taken|date:'SHORT_DATE_FORMAT' }}">{{ flood_event.0.date_taken|date:'SHORT_DATE_FORMAT' }} - {{ last_element.date_taken|date:'SHORT_DATE_FORMAT' }}</a></li>
-                        {% endwith %}
+                            <li><a href="timeline.html?{{ flood_event.0.0.date_taken|date:'SHORT_DATE_FORMAT' }}+{{ flood_event.0.1.date_taken|date:'SHORT_DATE_FORMAT' }}">{{ flood_event.0.0.date_taken|date:'SHORT_DATE_FORMAT' }} - {{ flood_event.0.1.date_taken|date:'SHORT_DATE_FORMAT' }}</a></li>
                     {% endfor %}
                 {% endif %}
               </ul>
