edited graph view to send flood_events and photo list edited graph view to display rain levels.

--- a/django_project/flood/templates/flood/graph.html
+++ b/django_project/flood/templates/flood/graph.html
@@ -18,5 +18,12 @@
       <li role="presentation>" class="active"><a href="graph">Graph</a> </li>
     </ul>
   </div>
+  {% if flood_events %}
+    {% for flood_event in flood_events %}
+      {% for rain in flood_event.2 %}
+        <li>{{ rain.date_taken|date:'SHORT_DATE_FORMAT' }}, {{ rain.level }}</li>
+      {% endfor %}
+    {% endfor %}
+  {% endif %}
 </body>
 </html>
