changing display of photos/graphs on timeline.

--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -24,9 +24,25 @@
             <span class="caret"></span></button>
             <ul class="dropdown-menu">
                 <li><a href="timeline.html">All Events</a></li>
+                <script>
+                    var trace1 = {
+                    x: [],
+                    y: [],
+                    type: 'scatter'
+                    };
+                </script>
                {% if flood_events %} 
                     {% for flood_event in flood_events reversed %} 
                         <li><a href="timeline.html?{{ flood_event.0|date:'SHORT_DATE_FORMAT' }}+{{ flood_event.1|date:'SHORT_DATE_FORMAT' }}">{{ flood_event.0|date:'SHORT_DATE_FORMAT' }} - {{ flood_event.1|date:'SHORT_DATE_FORMAT' }}</a></li> 
+                        <script>
+                            var substr = location.search.substr(1);
+                            var dates = substr.split("+");
+                            var dateTaken = new Date("{{ flood_event.2.date_taken|date:'SHORT_DATE_FORMAT' }}")
+                            if (dateTaken >= Date(dates[0]) && dateTaken <= new Date(dates[1])) {
+                                trace1.x.push("{{ flood_event.2.date_taken }}")
+                                trace1.y.push("{{ flood_event.2.level }}")
+                            }
+                        </script>
                     {% endfor %} 
                {% endif %}
               </ul>
@@ -34,11 +50,16 @@
     </div>
     <h2>Timeline for flooding throughout areas in West Yorkshire</h2>
     <ul class="timeline">
+        <script>
+            if (dates[0] != ""){
+                document.write('<li class="timeline-inverted"><div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div><div class="timeline-panel"> <div class="timeline-heading"> <h4 class="timeline-title">Rain Gauge Graph</h4> </div> <div class="timeline-body"> <div id="myDiv" style="width: 480px; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div> </div> </div> </li>')
+                var data = [trace1];
+                Plotly.newPlot('myDiv', data);
+            }
+        </script>
         {% if photo_list %}
             {% for photo in photo_list %}
                 <script>
-                    var substr = location.search.substr(1);
-                    var dates = substr.split("+");
                     var photoDate = new Date("{{ photo.date_taken|date:'SHORT_DATE_FORMAT' }}");
 
                     if (photoDate >= new Date(dates[0]) && photoDate <= new Date(dates[1])) {
@@ -52,14 +73,7 @@
         {% else %}
             <p>No photos available</p>
         {% endif %}
-        <script>
-            var trace1 = {
-            x: [],
-            y: [],
-            type: 'scatter'
-            };
-        </script>
-        {% if flood_events %}
+        <!--{% if flood_events %}
             {% for flood_event in flood_events %}
                 {% for rain in flood_event.2 %}
                     <script>
@@ -71,14 +85,7 @@
                     </script>
                 {% endfor %}
             {% endfor %}
-        {% endif %}
-        <script>
-            if (dates[0] != ""){
-                document.write('<li class="timeline-inverted"><div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div><div class="timeline-panel"> <div class="timeline-heading"> <h4 class="timeline-title">Rain Gauge Graph</h4> </div> <div class="timeline-body"> <div id="myDiv" style="width: 480px; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div> </div> </div> </li>')
-                var data = [trace1];
-                Plotly.newPlot('myDiv', data);
-            }
-        </script>
+        {% endif %}-->
         <!--<li>
           <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
           <div class="timeline-panel">
