--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -60,7 +60,7 @@
     {% endif %}
     <script>
         if (dates[0] != ""){
-            document.write('<div id="myDiv" style="width: 700px; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>')
+            document.write('<div id="myDiv" style="min-width: 1100px; width:100%; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>')
             var data = [trace1];
             Plotly.newPlot('myDiv', data);
         }
