--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -60,11 +60,17 @@
     {% endif %}
     <script>
         if (dates[0] != ""){
-            document.write('<div id="myDiv" style="min-width: 1100px; width:100%; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>')
             var data = [trace1];
-            Plotly.newPlot('myDiv', data);
+            if (data == []){
+                document.write('<h3>No Rain gauge data available for the dates selected.</h3>')
+            }
+            else if (data != []) {
+                document.write('<div id="myDiv" style="min-width: 1100px; width:100%; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>')
+                Plotly.newPlot('myDiv', data);
+            }
         }
         else if (dates[0] == ""){
+            document.write('<h3>Displaying rain gauge for all available dates.</h3>')
             document.write('<div id="myDiv" style="min-width: 1100px; width:100%; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>')
             var data = [trace1];
             Plotly.newPlot('myDiv', data);
