--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -61,10 +61,10 @@
     <script>
         if (dates[0] != ""){
             var data = [trace1];
-            if (data == null){
+            if (data[0] == null){
                 document.write('<h3>No Rain gauge data available for the dates selected.</h3>')
             }
-            else if (data != null) {
+            else if (data[0] != null) {
                 document.write('<div id="myDiv" style="min-width: 1100px; width:100%; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>')
                 Plotly.newPlot('myDiv', data);
             }
