--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -60,12 +60,12 @@
     {% endif %}
     <script>
         if (dates[0] != ""){
-            var data = [trace1];
-            if (data === undefined || data.length == 0){
+            if (trace1 === undefined || trace1.length == 0){
                 document.write('<h3>No Rain gauge data available for the dates selected.</h3>')
             }
             else {
                 document.write('<div id="myDiv" style="min-width: 1100px; width:100%; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>')
+                var data = [trace1]
                 Plotly.newPlot('myDiv', data);
             }
         }
