--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -60,8 +60,8 @@
     {% endif %}
     <script>
         if (dates[0] != ""){
-            console.error(trace1)
-            if (trace1 === undefined || trace1.length == 0){
+            console.error(trace1.x)
+            if (trace1.x === 0 || trace1.x.length == 0){
                 document.write('<h3>No Rain gauge data available for the dates selected.</h3>')
             }
             else {
